hotfix #2 doc-card text wrapping fixed

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -861,6 +861,7 @@
 
     &__stats {
         display: flex;
+        white-space: nowrap;
         &-wrap {
             &::before {
                 content: "";
